# rules_yq

./: .bazelversion  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.yaml  release.yml
docs/: BUILD.bazel  repositories.md  rules.md  toolchain.md
example/eval/: BUILD.bazel  sample.yaml
example/eval-all/: BUILD.bazel  sample.yaml
example/genrule/: BUILD.bazel
yq/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
yq/private/: BUILD.bazel  toolchains_repo.bzl
yq/private/rules/: BUILD.bazel  eval.bzl
