load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

genrule(
    name = "actual",
    outs = ["actual.yaml"],
    cmd = "$(YQ_BIN) eval '.one = 1' --null-input > $@",
    toolchains = ["@yq4_16_2_toolchains//:resolved_toolchain"],
)

write_file(
    name = "expected",
    out = "out.yaml",
    content = [
        "one: 1",
        "",
    ],
)

diff_test(
    name = "check_eval",
    file1 = ":expected",
    file2 = ":actual",
)
