load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]) + [
        "//yq/private/rules:package_content",
    ],
    visibility = ["//yq:__pkg__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//yq:__subpackages__"],
)
